[package]
name = "bsc-connect-to-vertica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.4"                         # A native, synchronous PostgreSQL client
anyhow = "1.0.65"                                   # Flexible concrete Error type built on std::error::Error
